--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/slider"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="@color/white"
@@ -27,28 +27,28 @@
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/range_slider"
             android:textColor="@color/white"
             app:icon="@drawable/ic_slider"
             app:iconTint="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sliderButton"
+            app:layout_constraintTop_toBottomOf="@+id/outlinedButton"
             app:strokeColor="@color/white"
             app:strokeWidth="1dp" />
 
         <Button
             android:id="@+id/outlinedButton"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="201dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:text="@string/outlinedButton"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rangeSliderButton"
+            app:layout_constraintTop_toBottomOf="@+id/sliderButton"
             app:strokeColor="@color/white"
             app:strokeWidth="1dp" />
 
@@ -58,13 +58,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:text="@string/outlinedButtonIcon"
             android:textColor="@color/white"
             app:icon="@drawable/ic_play"
             app:iconTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/outlinedButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="@color/white"
             app:strokeWidth="1dp" />
 
@@ -72,28 +72,28 @@
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:backgroundTint="@android:color/holo_blue_dark"
             android:text="@string/containedButton"
             android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/outlinedIconButton" />
+            app:layout_constraintTop_toBottomOf="@+id/sliderButton" />
 
         <Button
             android:id="@+id/containedButtonIcon"
+            style="@style/Widget.MaterialComponents.Button.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:layout_marginEnd="8dp"
             android:backgroundTint="@android:color/holo_blue_dark"
-            android:text="@string/containedButtonIcon"
+            android:text="@string/containedBtnIcon"
+            android:textColor="@color/black"
             app:icon="@drawable/ic_play"
             app:iconTint="@color/black"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:textColor="@color/black"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button" />
         <FrameLayout
             android:id="@+id/contentFragment"
             android:layout_width="match_parent"
